--- a/ex11/Requirements.txt
+++ b/ex11/Requirements.txt
@@ -1,6 +1,8 @@
 torch>=2.0.0
-transformers>=4.31.0
+transformers>=4.30.0
 datasets>=2.12.0
-accelerate>=0.21.0
-tensorboard>=2.13.0
-scipy>=1.10.1
+sentencepiece>=0.1.99
+accelerate>=0.20.0
+bitsandbytes>=0.40.0
+pdfplumber>=0.9.0
+PyPDF2>=3.0.0
