ex20: Dockerfile updated

--- a/ex20/Dockerfile
+++ b/ex20/Dockerfile
@@ -1,5 +1,5 @@
-# Use an official Python runtime as the base image
-FROM python:3.9-slim
+# Use an NVIDIA CUDA base image with Python
+FROM nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
@@ -9,6 +9,7 @@ ENV WEIGHTS_DIR="/weights"
 RUN apt-get update && apt-get install -y \
     ffmpeg \
     git \
+    python3-pip \
     && rm -rf /var/lib/apt/lists/*
 
 # Create a directory for the app and weights
@@ -24,7 +25,8 @@ COPY Xscribe.py /app/Xscribe.py
 RUN pip install --no-cache-dir \
     openai-whisper \
     pyannote.audio \
-    srt
+    srt \
+    torch torchaudio --index-url https://download.pytorch.org/whl/cu118
 
 # Set the entrypoint to run the script
 ENTRYPOINT ["python", "Xscribe.py"]
