--- a/ex26/CMakeLists.txt
+++ b/ex26/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(LogoTracker)
+project(logoTracker)
 
 set(CMAKE_CXX_STANDARD 14)
 
@@ -8,6 +8,6 @@ find_package(Eigen3 REQUIRED)
 
 include_directories(${EIGEN3_INCLUDE_DIRS})
 
-add_executable(LogoTracker main.cpp sort.cpp sort.h)
+add_executable(logoTracker main.cpp sort.cpp sort.h)
 
-target_link_libraries(LogoTracker ${OpenCV_LIBS})
+target_link_libraries(logoTracker ${OpenCV_LIBS})
