--- a/ex26/CMakeLists.txt
+++ b/ex26/CMakeLists.txt
@@ -8,6 +8,6 @@ find_package(Eigen3 REQUIRED)
 
 include_directories(${EIGEN3_INCLUDE_DIRS})
 
-add_executable(logoTracker main.cpp sort.cpp sort.h)
+add_executable(logoTracker logoTracker.cpp sort.cpp sort.h)
 
 target_link_libraries(logoTracker ${OpenCV_LIBS})
